--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -18,7 +18,7 @@
         <ul class="list-unstyled m-0">
           <li><a href="https://github.com/floriancourgey" target="_blank"><i class="fab fa-github"></i> <span class="username">Github floriancourgey</span></a></li>
           <li><a href="https://gitlab.com/floriancourgey" target="_blank"><i class="fab fa-gitlab"></i> <span class="username">Gitlab floriancourgey</span></a></li>
-          <li><a href="https://trailblazer.me/id/floriancourgey" target="_blank"><i class="fab fa-salesforce"></i> <span class="username">Salesforce floriancourgey</span></a></li>
+          <li><a href="https://trailblazer.me/id/floriancourgey" target="_blank"><i class="fa-cloud-download-alt fas"></i> <span class="username">Salesforce floriancourgey</span></a></li>
           <li><a href="https://www.paypal.me/floriancourgey" target="_blank"><i class="fab fa-cc-paypal"></i> <span class="username">Paypal floriancourgey</span></a></li>
           <li><a href="https://www.linkedin.com/in/floriancourgey" target="_blank"><i class="fab fa-linkedin"></i> <span class="username">Linkedin floriancourgey</span></a></li>
           <li><a href="https://yelp.fr/biz/florian-courgey-fontenay-aux-roses" target="_blank"><i class="fab fa-yelp"></i> <span class="username">Yelp florian-courgey</span></a></li>
