add salesforce & node red links to the header

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -60,19 +60,28 @@
               <span class="sr-only">Toggle Dropdown</span>
             </a>
             <div class="dropdown-menu">
+              <div class="dropdown-divider"></div>
+              <h4 class="dropdown-header">Service Cloud</h4>
+              <a class="dropdown-item" href="{% post_url 2021/2021-06-10-salesforce-apex-cheatsheet %}">Apex Cheatsheet</a>
+              <a class="dropdown-item" href="{% post_url 2020/2020-10-27-salesforce-soap-api-external-call %}">Salesforce SOAP API</a>
               <a class="dropdown-item" href="{% post_url 2021/2021-05-22-salesforce-service-cloud-acquisition-page %}">Service Cloud Acquisition Page</a>
-              <!--a class="dropdown-item" href="#">Marketing Cloud Journey External</a-->
+              <div class="dropdown-divider"></div>
+              <h4 class="dropdown-header">Marketing Cloud</h4>
+              <!--a class="dropdown-item" href="#">Marketing Cloud Journey External calls</a-->
+              <div class="dropdown-divider"></div>
+              <a class="dropdown-item" href="{% link categories.html %}?id=salesforce">All Salesforce</a>
             </div>
           </div>
         </li>
         <li class="nav-item">
           <div class="btn-group">
             <a href="#" class="nav-link dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              ➡️ Node-RED
+              🟥 Node-RED
               <span class="sr-only">Toggle Dropdown</span>
             </a>
             <div class="dropdown-menu">
               <a class="dropdown-item" href="{% post_url 2018/2018-11-22-use-node-red-for-automation %}">Node-RED for daily routine Slack notification</a>
+              <a class="dropdown-item" href="{% post_url 2021/2021-08-09-node-red-on-heroku %}">Easy deploy Node-RED on Heroku</a>
             </div>
           </div>
         </li>
