--- a/_includes/header.html
+++ b/_includes/header.html
@@ -49,6 +49,8 @@
               <a class="dropdown-item" href="{% post_url 2019/2019-03-13-using-dates-in-adobe-campaign %}">Date Best Practices</a>
               <a class="dropdown-item" href="{% post_url 2020/2020-09-21-delivery-post-processing-best-practices-adobe-campaign %}">Delivery post-processing Best Practices</a>
               <div class="dropdown-divider"></div>
+              <a class="dropdown-item" href="{% post_url 2021/2021-09-08-Adobe-MVP-Community-Advisor-Florian-Courgey %}">🏆 Florian Courgey nominated Adobe MVP for 2021!</a>
+              <div class="dropdown-divider"></div>
               <a class="dropdown-item" href="{% link categories.html %}?id=adobe campaign">All Adobe Campaign</a>
             </div>
           </div>
