+ Adob MVP in the announcement

--- a/_includes/announcement.html
+++ b/_includes/announcement.html
@@ -1,3 +1,3 @@
 <div class="text-center p-1 m-0 alert alert-info alert-dismissible">
-  This website has been migrated from an on-prem LAMP wordpress stack to a Jekyll on Github stack, fully hosted. Read more in the <a href="{% post_url 2018/2018-11-21-migrate-from-wordpress-to-jekyll %}" target="_blank"/>migration from WP to Jekyll article</a>.
+  🏆🏆🏆 I've been certified as an Adobe Community Advisor for 2021-2022! Read more on the <a href="{% post_url 2021/2021-09-08-Adobe-MVP-Community-Advisor-Florian-Courgey %}">Adobe MVP blog post</a> 🏆🏆🏆
 </div>
