--- a/_includes/header.html
+++ b/_includes/header.html
@@ -38,9 +38,12 @@
               <a class="dropdown-item" href="{% post_url 2020/2020-11-25-azcopy-from-adobe-campaign %}">🟦 Integrate ACC to <b>Azure Blob</b></a>
               <a class="dropdown-item" href="{% post_url 2020/2020-03-10-adobe-campaign-to-git %}">🐙 Integrate ACC to <b>Git Repository</b></a>
               <a class="dropdown-item" href="{% post_url 2020/2020-01-06-google-shopping-products-import-into-acc %}">🛍️ Integrate <b>Google Shopping</b> to ACC</a>
-              <a class="dropdown-item" href="{% post_url 2019/2019-11-08-dqm-workflow-javascript-with-query-and-api %}">🔡 Integrate ACC to External DQM vendor</a>
-              <a class="dropdown-item" href="{% post_url 2018/2018-10-15-use-javascript-libraries-in-adobe-campaign %}">📚 Integrate Javascript libraries to ACC</a>
+              <a class="dropdown-item" href="{% post_url 2019/2019-11-08-dqm-workflow-javascript-with-query-and-api %}">🔡 Integrate ACC to <b>External DQM vendor</b></a>
+              <a class="dropdown-item" href="{% post_url 2018/2018-10-15-use-javascript-libraries-in-adobe-campaign %}">📚 Integrate <b>Javascript libraries</b> to ACC</a>
               <a class="dropdown-item" href="{% post_url 2021/2021-06-10-salesforce-apex-cheatsheet %}#http-post-to-soap-adobe-campaign">☁️ Integrate Salesforce Service Cloud to ACC</a>
+              <div class="dropdown-divider"></div>
+              <h4 class="dropdown-header">Adobe Campaign Installation</h4>
+              <a class="dropdown-item" href="{% post_url 2019/2019-01-23-installing-adobe-campaign-locally %}">📦 Install Adobe Campaign locally</a>
               <div class="dropdown-divider"></div>
               <h4 class="dropdown-header">Adobe Campaign Tutorials</h4>
               <a class="dropdown-item" href="{% post_url 2019/2019-05-15-intro-adobe-campaign %}">ACC Getting started guide (awesome list)</a>
