--- a/_includes/header.html
+++ b/_includes/header.html
@@ -69,11 +69,13 @@
               <div class="dropdown-divider"></div>
               <h4 class="dropdown-header">Service Cloud</h4>
               <a class="dropdown-item" href="{% post_url 2021/2021-06-10-salesforce-apex-cheatsheet %}">Apex Cheatsheet</a>
+              <a class="dropdown-item" href="{% post_url 2022/2022-02-02-salesforce-visualforce-cheatsheet %}">Visualforce Cheatsheet</a>
               <a class="dropdown-item" href="{% post_url 2020/2020-10-27-salesforce-soap-api-external-call %}">Salesforce SOAP API</a>
               <a class="dropdown-item" href="{% post_url 2021/2021-05-22-salesforce-service-cloud-acquisition-page %}">Service Cloud Acquisition Page</a>
               <div class="dropdown-divider"></div>
               <h4 class="dropdown-header">Marketing Cloud</h4>
-              <!--a class="dropdown-item" href="#">Marketing Cloud Journey External calls</a-->
+              <a class="dropdown-item" href="{% post_url 2022/2022-08-18-salesforce-marketing-cloud-rest-api %}">Marketing Cloud REST API</a>
+              <a class="dropdown-item" href="{% post_url 2022/2022-08-18-salesforce-marketing-cloud-rest-api %}">Marketing Cloud REST API</a>
               <div class="dropdown-divider"></div>
               <a class="dropdown-item" href="{% link categories.html %}?id=salesforce">All Salesforce</a>
             </div>
