--- a/_includes/header.html
+++ b/_includes/header.html
@@ -72,10 +72,12 @@
               <a class="dropdown-item" href="{% post_url 2022/2022-02-02-salesforce-visualforce-cheatsheet %}">Visualforce Cheatsheet</a>
               <a class="dropdown-item" href="{% post_url 2020/2020-10-27-salesforce-soap-api-external-call %}">Salesforce SOAP API</a>
               <a class="dropdown-item" href="{% post_url 2021/2021-05-22-salesforce-service-cloud-acquisition-page %}">Service Cloud Acquisition Page</a>
+              <a class="dropdown-item" href="{% post_url 2022/2022-01-04-salesforce-service-sync-to-git %}">🐙 Integrate SFSC to <b>Git Repository</b></a>
+              <a class="dropdown-item" href="{% post_url 2022/2022-12-13-salesforce-getting-started-awesome-list %}">SFSC Getting started guide (Awesome Salesforce)</a>
               <div class="dropdown-divider"></div>
               <h4 class="dropdown-header">Marketing Cloud</h4>
               <a class="dropdown-item" href="{% post_url 2022/2022-08-18-salesforce-marketing-cloud-rest-api %}">Marketing Cloud REST API</a>
-              <a class="dropdown-item" href="{% post_url 2022/2022-08-18-salesforce-marketing-cloud-rest-api %}">Marketing Cloud REST API</a>
+              <a class="dropdown-item" href="{% post_url 2022/2022-11-09-salesforce-marketing-cloud-sql-data-model %}">SFMC data model</a>
               <div class="dropdown-divider"></div>
               <a class="dropdown-item" href="{% link categories.html %}?id=salesforce">All Salesforce</a>
             </div>
