--- a/_includes/header.html
+++ b/_includes/header.html
@@ -43,7 +43,8 @@
               <a class="dropdown-item" href="{% post_url 2021/2021-06-10-salesforce-apex-cheatsheet %}#http-post-to-soap-adobe-campaign">☁️ Integrate Salesforce Service Cloud to ACC</a>
               <div class="dropdown-divider"></div>
               <h4 class="dropdown-header">Adobe Campaign Installation</h4>
-              <a class="dropdown-item" href="{% post_url 2019/2019-01-23-installing-adobe-campaign-locally %}">📦 Install Adobe Campaign locally</a>
+              <a class="dropdown-item" href="{% post_url 2023/2023-11-21-adobe-campaign-windows %}">💻 Install Adobe Campaign on Windows</a>
+              <a class="dropdown-item" href="{% post_url 2019/2019-01-23-installing-adobe-campaign-locally %}">📀 Install Adobe Campaign on CentOS VM</a>
               <div class="dropdown-divider"></div>
               <h4 class="dropdown-header">Adobe Campaign Tutorials</h4>
               <a class="dropdown-item" href="{% post_url 2019/2019-05-15-intro-adobe-campaign %}">ACC Getting started guide (awesome list)</a>
