--- a/_includes/header.html
+++ b/_includes/header.html
@@ -121,9 +121,8 @@
               <a class="dropdown-item" href="{% post_url 2021/2021-01-14-windows-powershell-cheatsheet %}"><i class="fab fa-windows"></i> Windows & Powershell cheatsheet</a>
               <a class="dropdown-item" href="{% post_url 2021/2021-01-14-alteryx-cheatsheet %}"><i class="fas fa-exchange-alt"></i> Alteryx ETL data cheatsheet</a>
               <a class="dropdown-item" href="{% post_url 2018/2018-12-14-crack-and-hack-cheatsheet %}"><i class="fas fa-user-secret"></i> Crack & Hack</a>
-              <a class="dropdown-item" href="https://floriancourgey.github.io/tools/string/?ref=blog.floriancourgey.com" target="_blank"><i class="fas fa-code"></i>String tools <i class="fas fa-xs fa-external-link-alt"></i></a>
+              <a class="dropdown-item" href="https://gchq.github.io/CyberChef/" target="_blank"><i class="fas fa-code"></i>String tools <i class="fas fa-xs fa-external-link-alt"></i></a>
               <a class="dropdown-item" href="https://floriancourgey.github.io/tools/mpg/?ref=blog.floriancourgey.com" target="_blank"><i class="fas fa-futbol"></i> MPG tools <i class="fas fa-xs fa-external-link-alt"></i></a>
-              <a class="dropdown-item" href="https://floriancourgey.github.io/tools/seo/?ref=blog.floriancourgey.com" target="_blank"><i class="fas fa-share"></i> SEO tools <i class="fas fa-xs fa-external-link-alt"></i></a>
             </div>
           </div>
         </li>
