--- a/_includes/announcement.html
+++ b/_includes/announcement.html
@@ -1,3 +1,3 @@
-<div class="text-center p-1 m-0 alert alert-info alert-dismissible">
+<!--div class="text-center p-1 m-0 alert alert-info alert-dismissible">
   🏆🏆🏆 I've been certified as an Adobe Community Advisor for 2021-2022! Read more on the <a href="{% post_url 2021/2021-09-08-Adobe-MVP-Community-Advisor-Florian-Courgey %}">Adobe MVP blog post</a> 🏆🏆🏆
-</div>
+</div-->
