--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -17,11 +17,8 @@
         <h5>Social profiles</h5>
         <ul class="list-unstyled m-0">
           <li><a href="https://github.com/floriancourgey" target="_blank"><i class="fab fa-github"></i> <span class="username">Github floriancourgey</span></a></li>
-          <li><a href="https://gitlab.com/floriancourgey" target="_blank"><i class="fab fa-gitlab"></i> <span class="username">Gitlab floriancourgey</span></a></li>
           <li><a href="https://trailblazer.me/id/floriancourgey" target="_blank"><i class="fa-cloud-download-alt fas"></i> <span class="username">Salesforce floriancourgey</span></a></li>
-          <li><a href="https://www.paypal.me/floriancourgey" target="_blank"><i class="fab fa-cc-paypal"></i> <span class="username">Paypal floriancourgey</span></a></li>
           <li><a href="https://www.linkedin.com/in/floriancourgey" target="_blank"><i class="fab fa-linkedin"></i> <span class="username">Linkedin floriancourgey</span></a></li>
-          <li><a href="https://yelp.fr/biz/florian-courgey-fontenay-aux-roses" target="_blank"><i class="fab fa-yelp"></i> <span class="username">Yelp florian-courgey</span></a></li>
         </ul>
       </div>
 
@@ -29,9 +26,7 @@
         <h5>Network</h5>
         <ul class="list-unstyled m-0">
           <li><a href="https://blog.floriancourgey.com" target="_blank"><i class="fas fa-newspaper"></i> <span class="username">blog.floriancourgey.com</span></a></li>
-          <li><a href="https://onedrive.live.com/" target="_blank"><i class="fas fa-cloud"></i> <span class="username">cloud</span></a></li>
           <li><a href="https://floriancourgey.com" target="_blank"><i class="fas fa-meteor"></i> <span class="username">www.floriancourgey.com</span></a></li>
-          <li><a href="https://pro1.mail.ovh.net/owa/" target="_blank"><i class="fas fa-envelope-open-text"></i> <span class="username">emails</span></a></li>
         </ul>
       </div>
 
@@ -59,8 +54,14 @@
     </div>
 
     <div class="text-center my-4">
-      <a href="https://travis-ci.com/floriancourgey/blog" target="_blank">
-        <img src="https://travis-ci.com/floriancourgey/blog.svg?branch=master" alt="">
+      <a href="https://github.com/floriancourgey/blog/commits/master/" target="_blank">
+        <img src="https://img.shields.io/github/last-commit/floriancourgey/blog/master" alt="">
+      </a>
+      <a href="https://github.com/floriancourgey/blog" target="_blank">
+        <img src="https://img.shields.io/github/languages/code-size/floriancourgey/blog" alt="">
+      </a>
+      <a href="https://github.com/floriancourgey/blog/actions" target="_blank">
+        <img src="https://img.shields.io/github/deployments/floriancourgey/blog/github-pages?label=build" alt="">
       </a>
       <a href="https://stackshare.io/floriancourgey/blog"  target="_blank">
         <img src="https://img.shields.io/badge/tech-stack-0690fa.svg?style=flat)](https://stackshare.io/floriancourgey/blog" alt="">
